@@ -7,10 +7,8 @@
 import string, re
 import extractor
 
-def searchLoadLin(path, blacklist=[]):
-	markerStrings = [ 'Ooops..., size of "setup.S" has become too long for LOADLIN,'
-			, 'LOADLIN started from $'
-			]
+## generic searcher for certain marker strings
+def genericSearch(path, markerStrings, blacklist=[]):
         try:
                 binary = open(path, 'rb')
                 lines = binary.read()
@@ -22,73 +20,39 @@ def searchLoadLin(path, blacklist=[]):
 				return None
         except Exception, e:
                 return None
+
+def searchLoadLin(path, blacklist=[]):
+	markerStrings = [ 'Ooops..., size of "setup.S" has become too long for LOADLIN,'
+			, 'LOADLIN started from $'
+			]
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchIptables(path, blacklist=[]):
 	markerStrings = [ 'iptables who? (do you need to insmod?)'
 			, 'Will be implemented real soon.  I promise ;)'
 			, 'can\'t initialize iptables table `%s\': %s'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchDproxy(path, blacklist=[]):
 	markerStrings = [ '# dproxy monitors this file to determine when the machine is'
 			, '# If you want dproxy to log debug info specify a file here.'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchEzIpupdate(path, blacklist=[]):
 	markerStrings = [ 'ez-ipupdate Version %s, Copyright (C) 1998-'
 			, '%s says that your IP address has not changed since the last update'
 			, 'you must provide either an interface or an address'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchLibusb(path, blacklist=[]):
 	markerStrings = [ 'Check that you have permissions to write to %s/%s and, if you don\'t, that you set up hotplug (http://linux-hotplug.sourceforge.net/) correctly.'
 			, 'usb_os_find_busses: Skipping non bus directory %s'
 			, 'usb_os_init: couldn\'t find USB VFS in USB_DEVFS_PATH'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchVsftpd(path, blacklist=[]):
 	markerStrings = [ 'vsftpd: version'
@@ -96,64 +60,24 @@ def searchVsftpd(path, blacklist=[]):
 			, 'VSFTPD_LOAD_CONF'
 			, 'run two copies of vsftpd for IPv4 and IPv6'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchHostapd(path, blacklist=[]):
 	markerStrings = [ 'hostapd v'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchWpaSupplicant(path, blacklist=[]):
 	markerStrings = [ 'wpa_supplicant v'
 			]
-        try:
-		binary = open(path, 'rb')
-		lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-	except Exception, e:
-		return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchIproute(path, blacklist=[]):
 	markerStrings = [ 'Usage: tc [ OPTIONS ] OBJECT { COMMAND | help }'
 			, 'tc utility, iproute2-ss%s'
 			, 'Option "%s" is unknown, try "tc -help".'
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchWirelessTools(path, blacklist=[]):
 	markerStrings = [ "Driver has no Wireless Extension version information."
@@ -162,31 +86,11 @@ def searchWirelessTools(path, blacklist=[]):
 			, "Wireless Extension, while we are using version %d."
 			, "Currently compiled with Wireless Extension v%d."
        	                ]
-        try:
-                wireless_binary = open(path, 'rb')
-                lines = wireless_binary.read()
-		for marker in markerStrings:
-			offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-				return True
-			else:
-				return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchRedBoot(path, blacklist=[]):
 	markerStrings = ["Display RedBoot version information"]
-        try:
-                redboot_binary = open(path, 'rb')
-                lines = redboot_binary.read()
-		for marker in markerStrings:
-                	offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-                       		return True
-                	else:
-                        	return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
 
 def searchUBoot(path, blacklist=[]):
         markerStrings = [ "run script starting at addr"
@@ -194,14 +98,4 @@ def searchUBoot(path, blacklist=[]):
 			, "## Binary (kermit) download aborted"
 			, "## Ready for binary (ymodem) download "
 			]
-        try:
-                binary = open(path, 'rb')
-                lines = binary.read()
-        	for marker in markerStrings:
-               		offset = lines.find(marker)
-			if offset != -1 and not extractor.inblacklist(offset, blacklist):
-                        	return True
-                	else:
-                        	return None
-        except Exception, e:
-                return None
+	return genericSearch(path, markerStrings, blacklist)
