@@ -1,5 +1,7 @@
 2011-02-15
 * use 'file' to determine the size of squashfs file systems.
+* introduce "genericSearch" and rewrite all checks in checks.py to use
+genericSearch
 
 2011-02-13
 * only pass data between cpio header and trailer to the cpio unpacker.
